#############################################################################
BETA PUBLIC RELEASE VERSION 0.2.2       ??-??-02
#############################################################################

  * Fixed bug for nonpolar force evaluation in Vpmg_dbnpForce
  * Removed MG test scripts -- use bin/*.c for templates/testing
  * Made main driver code completely memory-leak free (i.e., if you wanted to
    wrap it and call it repeatedly -- Thanks to Robert Konecny)
  * Fixed main driver code for compatibility with SGI compilers (Thanks to
    Fabrice Leclerc)
  * Made focused evaluation of forces more sensible.
  * Added 'print force' statement
  * Fixed bug in OpenDX input/output (OpenDX documentation is lousy!)

#############################################################################
BETA PUBLIC RELEASE VERSION 0.2.1       04-23-02
#############################################################################
This version requires the latest version of MALOC to work properly!
  * Syntax changes
    - The writepot and writeacc keywords have been generalized and new I/O
      features have been added.  The syntax is
      now:  write pot dx potential
            write smol dx potential
            etc.
      Please see the User's Manual for more information
    - The read keywords has been generalized and new I/O features have been
      added which support the use of pre-calculated coefficient grids, etc..
      The correct syntax for reading in a molecule is now 
      "read mol pqr mol.pqr end"; please see the User's Manual for more
      information.
    - The "mg" keyword is no longer supported; all input files should use
      "mg-manual" or one of the other alternatives instead.
  * A change in the behavior of the "calcenergy" keyword; passing an argument
    of 2 to this keyword now prints out per-atom energies in addition to the
    energy component information
  * A new option has been added to tools/manip/acc to give per-atom solvent-