@@ -2,6 +2,8 @@
 BETA PUBLIC RELEASE VERSION 0.2.2       ??-??-02
 #############################################################################
 
+  * Updated documentation, placing particular emphasis on use of Intel
+    compilers and vendor BLAS on Intel Linux systems
   * Fixed bug for nonpolar force evaluation in Vpmg_dbnpForce
   * Removed MG test scripts -- use bin/*.c for templates/testing
   * Made main driver code completely memory-leak free (i.e., if you wanted to
